@@ -52,6 +52,16 @@
 			<groupId>io.github.nilshoffmann</groupId>
 			<artifactId>db4o-nbm</artifactId>
 			<version>2.0.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-reload4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>ch.qos.reload4j</groupId>
+					<artifactId>reload4j</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- ObjectDB Jakarta (instalado en repositorio local con mvn install:install-file) -->
@@ -67,6 +77,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<includeSystemScope>true</includeSystemScope>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.openjfx</groupId>
@@ -74,6 +87,9 @@
 				<version>0.0.8</version>
 				<configuration>
 					<mainClass>com.damianqm.tarea3adt.Tarea3AdtApplication</mainClass>
+					<options>
+						<option>--enable-native-access=javafx.graphics</option>
+					</options>
 				</configuration>
 			</plugin>
 		</plugins>
